--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
             font-family: "Poppins", sans-serif;
         }
 
-        nav {
+        nav { 
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 0 20px;
             height: 70px;
-            background-color: rgb(17, 17, 68);
+            background-color: rgb(0, 0, 33);
+            width: 100%;
+           
         }
 
         .left {
